syntax = "proto3";

message KeyExchange {
  bytes sigPubKey = 1;
  bytes ecdhPubKey = 2;
}
